# spotify-popularity-predictor

./: .gitignore  README.md  inference.py  main.py  pyproject.toml  tune_pipeline.py
data/: clean_data_v1.parquet
models/: spotify-preprocessor_v1.joblib
notebooks/: 1. Analiza EDA.ipynb  2. Feature Engineering.ipynb  3. Modeling.ipynb  4. Tunning.ipynb
src/: cleaners.py  evaluation.py  loaders.py  predictors.py  preprocessors.py  serializers.py  trainers.py  tuner.py  visualization.py
tests/: conftest.py  test_cleaners.py  test_integration.py  test_preprocessors.py  test_serializers.py
