[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.3.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "notebook>=7.5.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
